--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@mui/material": "^5.16.6",
     "@mui/x-date-pickers": "^7.12.0",
     "@mui/x-date-pickers-pro": "^7.27.0",
-    "@vitejs/plugin-react": "^1.3.2",
     "antd": "^5.25.1",
     "axios": "^1.7.2",
     "axios-retry": "^4.4.1",
@@ -54,13 +53,15 @@
     "uuid": "^11.1.0",
     "vite-plugin-svgr": "^4.2.0",
     "zmp-sdk": "^2.39.9",
-    "zmp-ui": "^1.11.4"
+    "zmp-ui": "^1.11.4",
+    "zmp-vite-plugin": "^1.1.6"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.17",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.38",
@@ -70,6 +71,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.77.6",
     "tailwindcss": "^3.4.4",
-    "vite": "^2.6.14"
+    "vite": "^5.4.19",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
